[workspace]

resolver = "2"

members = ["tests", "reflected", "reflected_proc"]

default-members = ["reflected"]

[workspace.dependencies]
chrono = "0.4"
rust_decimal = "1.34"
fake = "4.2"
sqlx = { version = "0.8", features = ["postgres", "chrono"] }
strum = { version = "0.27", features = ["derive", "strum_macros"] }


#reflected_proc = { path = "reflected_proc" }
reflected_proc = "=0.22.0"
