[workspace]

resolver = "3"

members = ["reflected", "reflected_proc", "tests"]

default-members = ["reflected"]

[workspace.dependencies]
chrono = "0.4"
fake = "5.1"
pretty_assertions = "1.4"
rust_decimal = "1.40"
sqlx = { version = "0.8", features = ["chrono", "postgres"] }
strum = { version = "0.28", features = ["derive", "strum_macros"] }


#reflected_proc = { path = "reflected_proc" }
reflected_proc = "=0.29.0"
