[package]
name = "reflected"
version = "0.11.1"
edition = "2024"
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
description = "Something like reflection"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/VladasZ/reflected"
repository = "https://github.com/VladasZ/reflected"

[dependencies]
chrono = { workspace = true }
rust_decimal = { workspace = true }
reflected_proc = { workspace = true }
fake = { workspace = true }
sqlx = { workspace = true }
