[package]
name = "reflected"
version = "0.29.0"
edition = "2024"
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
description = "Something like reflection"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/VladasZ/reflected"
repository = "https://github.com/VladasZ/reflected"

[package.metadata.cargo-machete]
ignored = ["sqlx"]

[features]
default = []
random = ["fake"]

sqlx_bind = ["sqlx", "reflected_proc/sqlx_bind"]

[dependencies]
chrono = { workspace = true }
fake = { workspace = true, optional = true }
rust_decimal = { workspace = true }
reflected_proc = { workspace = true }
sqlx = { workspace = true, optional = true }
