[package]
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
description = "Something like reflection"
edition = "2024"
homepage = "https://github.com/VladasZ/reflected"
license = "MIT OR Apache-2.0"
name = "reflected"
repository = "https://github.com/VladasZ/reflected"
version = "0.30.0"

[package.metadata.cargo-machete]
ignored = ["sqlx"]

[features]
default = []
random = ["fake"]

sqlx_bind = ["reflected_proc/sqlx_bind", "sqlx"]

[dependencies]
chrono = { workspace = true }
fake = { workspace = true, optional = true }
reflected_proc = { workspace = true }
rust_decimal = { workspace = true }
sqlx = { workspace = true, optional = true }
