[package]
name = "tests"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.cargo-machete]
ignored = ["sqlx"]

[dependencies]
sqlx = { workspace = true, features = ["rust_decimal"] }
chrono = { workspace = true }
rust_decimal = { workspace = true }
fake = { workspace = true }

reflected = { path = "../reflected" }
